[package]
name = "pgcronner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pgcronnerlib"
path = "src/lib.rs"
#crate-type = ["cdylib"]

[[bin]]
name = "main"
path= "src/main.rs"

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
pyo3 = "0.19.0"
pyo3-log = "0.9.0"
