[package]
name = "pgcronner"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pgcronner"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
postgres = "0.19.7"
pyo3 = { version = "0.19.0", features = ["multiple-pymethods"] }
pyo3-log = "0.9.0"
regex = "1.10.2"
