[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "pgcronner"
description = "Fast pgcron manager written in Rust"
license = {file = "LICENSE"}
authors = [
    {name = "Abel Hristodor", email = "habelor@gmail.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/AbelHristodor/pgcronner"

[tool.maturin]
features = ["pyo3/extension-module"]

