[tool.poetry]
name = "pgdjango"
version = "0.1.0"
description = ""
authors = ["AbelHristodor <habelor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^3.2"
pgcronner = "^0.1.5"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"
croniter = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
